k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  labels:
    app: api
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /                     # / หรือ /api
        pathType: Prefix
        backend:
          service:
            name: api-service              # → service.name
            port:
              number: 80          # → service.port
